...
    <string name="patient_name_colon">Patient Name:</string>
    <string name="home">Home</string>
    <string name="username_colon">Username:</string>
    <string name="email_colon">Email:</string>
    <string name="your_profile">Your Profile</string>
    <string name="phone_colon">Phone:</string>
    <string name="profile">Profile</string>
    <string name="add_patient">Add Patient</string>
    <string name="info">Info</string>
    <string name="record_info">Record Info</string>
    <string name="date_and_time_colon">Date and Time:</string>
    <string name="comment_colon">Comment:</string>
    <string name="location">Location</string>
...
